test/invalid/baseline/iterable-empty.txt
Syntax error at line 2, since `interface X`:
    iterable<>;
             ^ Error parsing iterable declaration
